propertee-core/src/test/resources/tests/105_error_reserved_function_name.expected
before
Runtime error: Runtime Error at line 3:0: Cannot define function 'LEN': all-uppercase names are reserved for built-in and host functions
